--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,6 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-
-  font-family: Georgia, serif;
-
-  background-color: #f5f2f0;
 }
 
 *, *::before, *::after {
@@ -23,29 +19,81 @@ html {
 
 body {
   margin: 0;
+  background-color: rgba(262,54,12, .75);
+  z-index: -2;
 }
 
-/*#circle {
+#circle {
+  margin: auto;
 	width: 100px;
 	height: 100px;
-	background: red;
+	background: #6F6F6F;
 	-moz-border-radius: 50px;
 	-webkit-border-radius: 50px;
 	border-radius: 50px;
   position :relative;
   -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
   animation: mymove 5s infinite;
-  z-index: 1000;
+  z-index: 2;
+  top: 12%;
 }
-*/
+
 
 @keyframes mymove {
-    from {left: 0px;}
-    to {left: 200px;}
+    from {left: -10%;}
+    to {left: 10%;}
 }
 
-.card {
-  background-color: #ede3db;
-  border: 2px solid #623b0c;
-  border-radius: 8px;
+.alfa {
+  font-family: 'Alfa Slab One', cursive;
+  color: #fff;
+}
+.row-1 {
+  /*z-index: 1;
+  position: relative;
+  text-align: center;*/
+}
+
+.row-1 p {
+  color: blue;
+}
+.mont {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.mont-row-1 {
+  /*z-index: 2;
+  position: absolute;
+  text-align: center;
+  left: 0;
+  right: 0;
+  top: 30%;*/
+
+}
+
+.between {
+  position: relative;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  top: 130px;
+  z-index: 2;
+}
+
+/*#alfa {
+  font-family: 'Alfa Slab One', cursive;
+  color: #fff;
+  z-index: 1;
+  position: relative;
+  text-align: center;
+  width: auto;
+  height: 400px;
+}
+
+#mont {
+  font-family: 'Montserrat', sans-serif;
+  z-index: 2;
+  position: relative;
+  text-align: center;
+  height: 100%;
+  margin-top: -300px;
 }
